updates html/css file completes JS room navigation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Enter the house. Search the rooms. Find your friends. Kill the enemy!
             </p>
         </div>
-        <div class="button-content">
+        <div class="user-action-area">
             <button onclick="startGame()">START</button>
         </div>
     </div>
