--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body class="flex-center">
     
-    <h1>Play a super crazy adventure game!</h1>
+    <h1 class="title">Play a super crazy adventure game!</h1>
 
     <div class="container flex-center">
 
-        <div>
             <p class="game-content">
                 Enter the house. Search the rooms. Find your friends. Kill the enemy!
             </p>
-        </div>
+            <div class="speech-area">
+            </div>
+            
         <div class="user-action-area">
             <button onclick="startGame()">START</button>
         </div>
