--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <!-- you win section -->
         <section class="you-win">
             <h1 class="end-game-title">YOU BEAT TRUMP</h1>
-            <img src="/assets/we-are-eternally-grateful.jpg" alt="">
+            <img src="assets/we-are-eternally-grateful.jpg" alt="">
             <Button class="end-game-button" onclick="location.reload()">Play Again!</Button>
         </section>
         <!-- you lose section -->
         <section class="you-lost">
             <h1 class="end-game-title">TRUMP GOT YOU!</h1>
             <h3 class="end-game-title">You didn't find the items to beat trump!</h3>
-            <img src="/assets/giphy.gif" alt="">
+            <img src="assets/giphy.gif" alt="">
             <Button class="end-game-button" onclick="location.reload()">Play Again!</Button>
         </section>
 
@@ -48,7 +48,7 @@
             <div class="inside-backpack">
                 <div class="item">
                     <div class="image-container">
-                        <img class="item-image" src="/assets/torch.jpg" alt="">
+                        <img class="item-image" src="assets/torch.jpg" alt="">
                     </div>
                     <div class="item-title">
                         <h5>Torch</h5>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="item item-2">
                     <div class="image-container">
-                        <img class="item-image" src="/assets/chinese-throwing-star.jpg" alt="">
+                        <img class="item-image" src="assets/chinese-throwing-star.jpg" alt="">
                     </div>
                     <div class="item-title">
                         <h5>Chinese throwing star</h5>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="item item-3">
                     <div class="image-container">
-                        <img class="item-image" src="/assets/biden-t-shirt.jpg" alt="">
+                        <img class="item-image" src="assets/biden-t-shirt.jpg" alt="">
                     </div>
                     <div class="item-title">
                         <h5>2020 Joe Biden T-shirt</h5>
