final tweaks to html/js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <p class="game-content">
-                Enter the house. Search the rooms. Find your friends. Kill the enemy!
+                Enter the house. Search the rooms. Find your friends. Beat Trump!
             </p>
             
         <div class="user-action-area">
