add help function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <h1 class="title">Play a super crazy adventure game!</h1>
 
-    <div class="container">
+    <div>
 
             <p class="game-content">
                 Enter the house. Search the rooms. Find your friends. Beat Trump!
@@ -69,6 +69,22 @@
                 </div>
             </div>
         </div>
+
+        <!-- help -->
+        <div id="help" style="display: block; margin-top: 100px">
+            <h1>Game Controls</h1>
+            <Ul>
+                <li><strong>Go North - </strong>north</li>
+                <li><strong>Go East - </strong>east</li>
+                <li><strong>Go South - </strong>south</li>
+                <li><strong>Go West - </strong>west</li>
+                <li><strong>Talk with a character - </strong>talk</li>
+                <li><strong>Accept item from character - </strong>accept</li>
+                <li><strong>Scream for help</strong> - help</li>
+            </Ul>
+        </div>
+
+
     </div>
 
     <script src="script.js"></script>
